--- a/src/components/cardİmage/Cardİmage.css
+++ b/src/components/cardİmage/Cardİmage.css
@@ -4,8 +4,10 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 10px;
+  margin-top: 10px;
 }
 
 .card-image > img {
   height: 200px;
+  object-fit: fill;
 }
